# MAS

./: .gitignore  .readthedocs.yaml  InferenceNest.py  NestEstim.py  README.md  backupnestDict.pkl  formatted_output2.txt  functions.py  inferenceMice.py  nestDict.pkl  pyproject.toml  requirements.txt
MAS/: InferenceNest.py  NestEstim.py  __init__.py  __main__.py  config.py  functions.py  gui.py  inferenceMice.py
MAS/backup/: nestDict.pkl
backup/: nestDict.pkl
docs/: .readthedocs.yaml  CPUinstall.rst  GPUinstall.rst  conf.py  index.rst  install on CPU.rst  install.rst  mkdocs.yml  model.rst  preprocess.rst  troubleshooting.rst  usage.rst
docs/source/: conf.py  index.rst
main/: InferenceNest.py  config.py  functions.py  gui.py  inferenceMice.py
main/DLC/Layout/: layout.yaml
